--- a/AppPlugin/AppPlugin.csproj
+++ b/AppPlugin/AppPlugin.csproj
@@ -104,7 +104,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <None Include="AppExtensionService.nuspec" />
+    <None Include="AppPlugin.nuspec" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
